--- a/git teste.html
+++ b/git teste.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    <h1>Página git teste</h1> 
-   <a href= "index.html" >voltar para pagina </a>
+   <p>Github atualizado com sucesso</p>
+   <a href= "index.html" >voltar para pagina inicial </a>
 </body>
 </html>
 
